# dioxus_fullstack_setup

./: .gitignore  Cargo.toml
backend/: Cargo.toml
frontend/: Cargo.toml
frontend/src/: main.rs
