[package]
name = "backend"
version = "0.1.0"
authors = ["X1Vi <gundeep477@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
axum = "0.8.4"
serde = "1.0.219"
serde_json = "1.0.143"
arti-client = "0.33.0"
tracing-subscriber = "0.3.19"

[profile.server-dev]
inherits = "dev"
